syntax = "proto3";
package dfinance.namespace.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

import "cosmos_proto/cosmos.proto";

import "dfinance/namespace/namespace.proto";

import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/dfinance/dstation/x/namespace/types";

// Query defines the gRPC querier service.
service Query {
  rpc DomainsAccount(DomainsAccountRequest) returns (DomainsAccountResponse) {
    option (google.api.http).post = "/dfinance/namespace/v1beta1/params";
  }
}

// DomainsAccountRequest is request type for Query/BuyName RPC method.
message DomainsAccountRequest {
  string address = 1 [
    (gogoproto.moretags) = "yaml:\"address\""
  ];
}

// DomainsAccountResponse is response type for Query/BuyName RPC method.
message DomainsAccountResponse {
  repeated Whois whois = 1 [
    (gogoproto.moretags) = "yaml:\"whois\"",
    (gogoproto.nullable) = false
  ];
}